Made OktaneReactive the main component (#56)
* Started reactive move

* Added more docs and benchmark results

* Used var throughout